<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#292929"
            android:padding="4dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/mobilecloud"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/button1"
                style="@style/ClientAmountButton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/rounded_cornder"
                android:padding="8dp"
                android:text="0"
                android:textColor="#ffffff"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/cloud" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/callnow"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="65dp"
        android:src="@drawable/call" />

    <ImageView
        android:id="@+id/btntoggle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/callnow"
        android:layout_marginRight="26dp"
        android:maxHeight="100dp"
        android:src="@drawable/play" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/callnow"
        android:layout_alignRight="@+id/callnow"
        android:layout_below="@+id/callnow"
        android:gravity="center"
        android:text="@string/mesh_call"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/btntoggle"
        android:layout_alignRight="@+id/btntoggle"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
        android:src="@drawable/mail" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignTop="@+id/imageView4"
        android:src="@drawable/wifi_tether" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView5"
        android:layout_alignRight="@+id/imageView5"
        android:layout_below="@+id/imageView5"
        android:gravity="center"
        android:text="@string/tether"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignRight="@+id/textView2"
        android:text="@string/mesh_sms"
        android:gravity="center_horizontal"
        android:textColor="#000000" />
    

    <TextView
        android:id="@+id/mainphonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="" />

    <com.facebook.android.LoginButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mainphonenumber"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/login_button" />

    <Button
        android:id="@+id/algo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="perform algo" />

</RelativeLayout>
